<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ImpastoCrepes">


    <TextView
        android:layout_gravity="center_horizontal"
        android:id="@+id/text_pizza"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/text_Impasto_crepes"
        android:textColor="@color/black"
        android:textSize="@dimen/text_fragment_size" />

    <EditText
        android:id="@+id/editTextNumberDecimal"
        android:layout_width="@dimen/width_num"
        android:layout_height="@dimen/height_num"
        android:autofillHints=""
        android:layout_gravity="center_horizontal"
        android:ems="10"
        android:textSize="@dimen/text_button_size"

        android:layout_marginHorizontal="100dp"
        android:hint="@string/text_grammi"
        android:inputType="numberDecimal"
        android:textColorHint="#757575" />

    <Button
        android:id="@+id/buttonInput"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_button_size"
        android:text="@string/textButtonInput" />

</LinearLayout>